@@ -245,7 +245,8 @@ libpthread {
   };
 
   GLIBC_2.12 {
-    pthread_mutex_consistent;
+    pthread_mutex_consistent; pthread_mutexattr_getrobust;
+    pthread_mutexattr_setrobust;
   };
 
   GLIBC_PRIVATE {
