@@ -1,4 +1,4 @@
-/* Copyright (C) 2005 Free Software Foundation, Inc.
+/* Copyright (C) 2005, 2010 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
    Contributed by Ulrich Drepper <drepper@redhat.com>, 2005.
 
@@ -21,7 +21,7 @@
 
 
 int
-pthread_mutexattr_getrobust_np (attr, robustness)
+pthread_mutexattr_getrobust (attr, robustness)
      const pthread_mutexattr_t *attr;
      int *robustness;
 {
@@ -34,3 +34,4 @@ pthread_mutexattr_getrobust_np (attr, robustness)
 
   return 0;
 }
+weak_alias (pthread_mutexattr_getrobust, pthread_mutexattr_getrobust_np)
